--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "kodisha",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "release": "standard-version"
   },
   "dependencies": {
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "standard-version": "^9.5.0"
   },
   "devDependencies": {
     "postcss": "^8",
