--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-spinners": "^0.13.8",
     "standard-version": "^9.5.0"
   },
   "devDependencies": {
