--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "mongodb": "^6.6.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
