--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "mongodb": "^6.6.2",
+    "moongose": "^1.0.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
