--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "cloudinary": "^2.2.0",
     "mongodb": "^6.6.2",
     "moongose": "^1.0.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.6.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
