--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "mongodb": "^6.6.2",
     "moongose": "^1.0.0",
     "next": "14.2.3",
-    "next-auth": "^5.0.0-beta.19",
+    "next-auth": "^4.24.7",
     "next-cloudinary": "^6.6.2",
     "react": "^18",
     "react-dom": "^18",
