--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5",
     "standard-version": "^9.5.0"
   },
   "devDependencies": {
