--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cloudinary": "^2.2.0",
+    "mapbox-gl": "^3.4.0",
     "mongodb": "^6.6.2",
     "moongose": "^1.0.0",
     "next": "14.2.3",
@@ -18,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-map-gl": "^7.1.7",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "standard-version": "^9.5.0"
