--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.6.2",
+    "photoswipe": "^5.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
